# webshift

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  server.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
crates/robot/: Cargo.toml
crates/robot/src/: harness.rs  main.rs
crates/webgate/: Cargo.toml
crates/webgate-mcp/: Cargo.toml
crates/webgate-mcp/src/: main.rs
crates/webgate/src/: config.rs  lib.rs
crates/webgate/src/backends/: bing.rs  brave.rs  exa.rs  google.rs  http.rs  mod.rs  searxng.rs  serpapi.rs  tavily.rs
crates/webgate/src/llm/: client.rs  expander.rs  mod.rs  summarizer.rs
crates/webgate/src/scraper/: cleaner.rs  fetcher.rs  mod.rs
crates/webgate/src/utils/: mod.rs  reranker.rs  url.rs
crates/webgate/tests/common/: mod.rs
crates/webshift/: Cargo.toml
crates/webshift-mcp/: Cargo.toml  README.md
crates/webshift-mcp/src/: main.rs
crates/webshift/src/: config.rs  lib.rs
crates/webshift/src/backends/: bing.rs  brave.rs  exa.rs  google.rs  http.rs  mod.rs  searxng.rs  serpapi.rs  tavily.rs
crates/webshift/src/llm/: client.rs  expander.rs  mod.rs  summarizer.rs
crates/webshift/src/scraper/: cleaner.rs  fetcher.rs  mod.rs  textmap.rs
crates/webshift/src/utils/: mod.rs  reranker.rs  url.rs
crates/webshift/tests/: integration_backends.rs  integration_fetch.rs  integration_llm.rs  integration_textmap.rs
crates/webshift/tests/common/: mod.rs
crates/webshift/tests/fixtures/: attributes.html  empty_nodes.html  fragmented.html  multilingual.html  newsletter.html  noise_heavy.html  simple.html
docs/: CONFIGURATION.md  UNDER_THE_HOOD.md  USE_CASES.md
docs/integrations/: AGENT.md  IDE.md  ZED_EXTENSION.md
examples/: claude-desktop-ollama.json  claude-desktop.json  webshift-brave.toml  webshift-minimal.toml  webshift-ollama.toml  webshift.toml  zed.json
integrations/zed/: Cargo.toml  extension.toml  extension.wasm
integrations/zed/assets/: default_settings.json  settings_schema.json
integrations/zed/src/: lib.rs
