[package]
name = "robot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Internal dev tool: bump, promote, unpromote, publish."

[[bin]]
name = "robot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
